# PriceTune-Fine-tuned-open-source-model-for-price-prediction

./: .env.example  01_data_preparation.ipynb  02_fine_tune_colab.ipynb  03_evaluate_fine_tuned_model_colab.ipynb  04_results_visualization.ipynb  LICENSE  README.md  pyproject.toml
