[project]
name = "pricetune"
version = "0.1.0"
description = "Fine-tune an open-source LLM for product price prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "python-dotenv",
    "huggingface-hub",
    "matplotlib",
    "pydantic",
    "scikit-learn",
    "plotly",
    "pandas",
    "transformers",
    "tqdm",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pricer"]
